--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "homepage": "https://gliexik.github.io/react-homework-template/",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-step-progress": "^1.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
