--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-scripts start --force",
+    "build": "react-scripts build --force",
+    "test": "react-scripts test --force",
+    "eject": "react-scripts eject --force",
     "lint:js": "eslint src/**/*.{js,jsx}",
     "react-devtools": "react-devtools"
   },
