--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-step-progress": "^1.0.3",
     "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start --force",
-    "build": "react-scripts build --force",
-    "test": "react-scripts test --force",
-    "eject": "react-scripts eject --force",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}",
     "react-devtools": "react-devtools"
   },
