--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
 
       - name: Install, lint, build 🔧
         run: |
-          npm install
-          npm run lint:js
-          npm run build
+          npm install --force
+          npm run lint:js --force
+          npm run build --force
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
