--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gliexik.github.io/react-homework-template/",
+  "homepage": "https://gliexik.github.io/resume-builder/",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
