--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.5",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
